# C-coding

./: README.md
113Coding/: CSE113 Notes  ascii.c~  cse113_Matthew_Olsen_prelab8.txt~  hello.c~  hello_million.c~  name.c~  name2.c~  randomint&f~
113Coding/final/: fizzbuzz.c  list.c  report.txt
113Coding/gameoflife/: gl.c  life.h  out.valgrind  out.valgrind~
122Coding/: heapsort.c~  heapsort.h~
122Coding/ComplexityProject/: 6 info  7 info  Fucntion 4~  Function 1~  Function 2~  Function 3  Function 3 Ascending.ps  Function 3~  Function 6  Function 6~  Function_1  Function_1.ps  Function_2  Function_2.ps  Function_3ascending  Function_3ascending~  Function_3descending.ps  Function_3descending~  Function_3random  Function_3random.ps  Function_3random~  Function_4  Function_4.ps  Function_5  Function_5.ps  Function_5~  Function_6ascending  Function_6ascending.ps  Function_6ascending~  Function_6descending  Function_6descending.ps  Function_6random  Function_6random.ps  Function_6random~  Function_7  Function_7.ps  Function_descending~  Makefile  Makefile~  asldkfj  (+3 more)
122Coding/lab-1/: .kml.c.swo  Makefile  README  README~  kml.c  kml.c~  kml.h  kml.h~  lab11.c  lab11.c~  locations.kml  locations.out
122Coding/lab0/: Makefile  Makefile~  README  README~  cube_binary.c  cube_binary.c~  cube_binary.out  fizzbuzz.c  fizzbuzz.c~  newton_cube.c  newton_cube.c~  newton_cube.out  newton_sqrt.c~  sum.c~  (+7 more)
COMP232/MatthewOlsenLab4/: CMakeLists.txt  ConsoleOutput.txt  output.txt
COMP232/MatthewOlsenLab4/src/: main.c  scanner.h  scanner_ad_hoc.c  scanner_nested_cases.c
(+564 files in other folders)
